bootstrap/test/cases/13_finally_errors.koral
// EXPECT-ERROR: 'return' is not allowed inside 'finally'

let f() Void = {
    finally {
        return  // error: return inside finally
    }
}
